--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ import org.apache.hadoop.io.IntWritable;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.mapreduce.Mapper;
 
-public class WordCountMapper extends Mapper<Object, Text, Text, IntWritable> {
+public class WordCountMapper extends Mapper<(Object, Text, Text, IntWritable)> {
     private final static IntWritable one = new IntWritable(1);
     private Text word = new Text();
 
