--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ import org.apache.hadoop.io.IntWritable;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.mapreduce.Mapper;
 
-public class WordCountMapper extends Mapper<(Object, Text, Text, IntWritable)> {
+public class WordCountMapper extends Mapper<(Object, Text, Text, IntWritable)> {  //remove extra parentheses
     private final static IntWritable one = new IntWritable(1);
     private Text word = new Text();
 
@@ -521,11 +521,11 @@ import org.apache.hadoop.io.IntWritable;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.mapreduce.Reducer;
 
-public class WordCountReducer extends Reducer<Text, IntWritable, Text, IntWritable> {
+public class WordCountReducer extends Reducer<(Text, IntWritable, Text, IntWritable)> { //remove extra parentheses
     private IntWritable result = new IntWritable();
 
     @Override
-    protected void reduce(Text key, Iterable<IntWritable> values, Context context)
+    protected void reduce(Text key, Iterable<(IntWritable)> values, Context context) //remove extra parentheses
             throws IOException, InterruptedException {
         int sum = 0;
         for (IntWritable val : values) {
@@ -550,7 +550,7 @@ import org.apache.hadoop.mapreduce.lib.output.FileOutputFormat;
 public class WordCountDriver {
     public static void main(String[] args) throws Exception {
         if (args.length != 2) {
-            System.err.println("Usage: WordCountDriver <input path> <output path>");
+            System.err.println("Usage: WordCountDriver <(input path)> <(output path)>"); //remove extra parentheses
             System.exit(-1);
         }
 
